--- a/firebase.json
+++ b/firebase.json
@@ -7,11 +7,15 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "public",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "frameworksBackend": {
+      "region": "europe-west1",
+      "maxInstances": 1
+    }
   }
 }
