--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "^1.6.3",
-		"firebase": "^10.11.0"
+		"firebase": "^10.11.1",
+		"svelte-icons-pack": "^3.1.3"
 	}
 }
